<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@android:style/Theme.Light"
    android:background="#ffffff" >

    <TextView
        android:id="@+id/txtCodigoOrdemServico"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:text="@string/numero"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPlacaOrdemServico"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_below="@+id/txtCodigoOrdemServico"
        android:layout_marginStart="8dp"
        android:text="@string/placa"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/txtCodigoOrdemServico"
        app:layout_constraintStart_toEndOf="@+id/txtCodigoOrdemServico"
        app:layout_constraintTop_toTopOf="@+id/txtCodigoOrdemServico"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtVeiculoOrdemServico"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/txtPlacaOrdemServico"
        android:layout_marginStart="8dp"
        android:text="@string/veiculo"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/txtPlacaOrdemServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPlacaOrdemServico"
        app:layout_constraintTop_toTopOf="@+id/txtPlacaOrdemServico" />


</androidx.constraintlayout.widget.ConstraintLayout>