<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Light"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="298dp"
        android:layout_height="328dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lblSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/entrar"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>