<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CadastroOrdemServicoActivity"
    android:theme="@android:style/Theme.Light"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblNewVeiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/veiculo"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtNewVeiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/veiculo"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lblNewPlaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/placa"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtNewPlaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/placa"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lblNewCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/cliente"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtNewCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cliente"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lblNewDataInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dataInicio"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/txtNewDataInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dataInicio"
            android:inputType="date"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lblNewDataFim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dataFinal"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtNewDataFim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dataFinal"
            android:inputType="date"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnCadastrarOrdemServico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="315dp"
            android:text="Incluir"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNewDataFim" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>